--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="Log In"
+                android:text="Hit me for resgiter"
                 android:background="@drawable/backhand2_design"
                 android:padding="4dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
