--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.Toolbar
+<android.support.v7.widget.Toolbar
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -8,4 +8,4 @@
     android:background="@drawable/backhand_design"
     >
 
-</android.widget.Toolbar>
+</android.support.v7.widget.Toolbar>
